--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,12 +1,12 @@
-CFLAGS += -Wall -DBSD_INTERFACE_FUNCTIONS
+CFLAGS += -Wall
 PROGRAM = Synth.bin
 LDFLAGS =
-SOURCES = Main.cpp Commands.cpp ProcessLine.cpp
-OBJECTS = $(SOURCES:.c=.o)
+SOURCES = Main.cpp Commands.cpp ProcessLine.cpp MakeTimerSpec.cpp
+OBJECTS = $(SOURCES:.cpp=.o)
 RM = rm -f
 
-#.c.o:
-#	$(CC) -c $(CFLAGS) $(CPPFLAGS) -o $@ $<
+.cpp.o:
+	$(CXX) -c $(CFLAGS) $(CPPFLAGS) -o $@ $<
 
 all: $(PROGRAM)
 
