--- a/score/score.yml
+++ b/score/score.yml
@@ -1,3 +1,31 @@
--
-  source: President
-  target: President
+type: mic
+
+source: hofmann
+target: hofmann
+
+mapping:
+  moderate:
+    command: select_random
+    arguments:
+      - [play, filename]
+      - [play, filename2]
+
+  loud:
+    command: select_random
+    arguments:
+      - [play, filename]
+
+---
+
+type: random
+
+data:
+  distribution: poisson
+  mean: 10.0
+
+mapping:
+  event:
+    command: select_random
+    arguments:
+      - [play, filename]
+      - [play, filename2]
