--- a/config/node-config.yml
+++ b/config/node-config.yml
@@ -1,25 +1,20 @@
 hofmann:
-  display:
-    enable: false
-
   audio:
     input:
-      enable: false
       use_default: true
-    output:
-      enable: false
 
   control_program: true
 
 Asimov:
-  display:
-    enable: false
-
   audio:
     input:
-      enable: false
       use_default: true
-    output:
-      enable: false
+
+  control_program: true
+
+pearl:
+  audio:
+    input:
+      use_default: true
 
   control_program: true
