--- a/score/score.yml
+++ b/score/score.yml
@@ -130,7 +130,7 @@ mapping:
 type: random
 
 data:
-  mean: 5.0                  # Trigger on average every 20 seconds.
+  mean: 3.0                  # Trigger on average every 20 seconds.
 
   distribution: poisson      # Select the distribution of these events.
                              # Today, we only have one distribution, poisson,
@@ -143,7 +143,15 @@ mapping:
       -
         function: image
         keywords:
-          image: blu_ball.png
+          image: $random
           position: [[0, [100, 100]], [20, [1000, 1000]]]
           size: [[0, 0.10], [5, 1.0], [10, 0.0], [18, 1.0], [20, 0.10]]
           rotation: [[0, 0], [5, 360], [10, -360], [18, 360], [20, 0]]
+
+      -
+        function: image
+        keywords:
+          image: $random
+          position: [200, 200]
+          loops: 3
+          size: [[0, 0.10], [1, 5.0], [2, 0.0]]
