Now we can play either through pyaudio or aplay

--- a/score/test.yml
+++ b/score/test.yml
@@ -6,17 +6,15 @@ type: sequence
 
 commands:
   -
-    time: 5.0
-    function: audio
-    keywords:
-      file: saw-2450.wav
-      pan: [[0, -1], [10, 1], [11, -1]]
-
-  -
-    time: 8.0
+    time: 2.0
     function: audio
     keywords:
       file: long-saw.wav
-      level: 1.0
-      pan: 0.0
-      loops: 1
+
+  -
+   time: 7.0
+   function: audio
+   keywords:
+     file: long-saw.wav
+     pan: [[0, -1], [10, 1], [11, -1]]
+
