--- a/config/node-config.yml
+++ b/config/node-config.yml
@@ -3,6 +3,9 @@ Chairman:
   score:
     file: test.yml
 #  audio: {input: {enable: false}, output: {enable: true}}
+  audio: {input: {verbose: false, use_default: true, enable: false},
+          output: {use_aplay: true}}
+  display: {enable: false}
 
 hofmann:
   headless: true
