--- a/command/3.global/score/score.yml
+++ b/command/3.global/score/score.yml
@@ -1,3 +1,5 @@
+# TODO: this reflects an updated version of the score language.
+# The code implements an older version.
 #
 # This is a sample score file for echomesh.
 # As you've guessed, # introduces comments, and blank lines are ingored.
@@ -6,8 +8,8 @@
 #
 #   1. We have four machines: President, Chairman, Treasurer and Secretary.
 #   2. A Machine receive Events and sends them to the whole system.
-#   3. There's a list of Elements.
-#   4. If a Element triggers on an Event, it triggers a Function.
+#   3. There's a list of main Elements.
+#   4. If an Event matches a event mapping Element, it can trigger another Element.
 #
 #
 # 1. Events.
@@ -89,40 +91,43 @@
 # And now for some specific examples of Elements!
 #
 
-type: mic           # This element triggers when a microphone changes levels.
+type: event         # An event handler.
 
-source: President   # This means that this element only triggers on events coming
-                    # FROM the Machine named President.
+arguments:
+  -
+    event_type: mic     # This element triggers when a microphone changes levels.
 
-target: President   # This means that this element only triggers ON the Machine
-                    # named President.
-                    #
-                    # If you omit the "source" field, the element will trigger on
-                    # all incoming events regardless of source Machine
-                    #
-                    # If you omit the "target" field, the element will trigger on
-                    # all Machines.
+    source: President   # This means that this element only triggers on events coming
+                        # FROM the Machine named President.
 
+    target: President   # This means that this element only triggers ON the Machine
+                        # named President.
+                        #
+                        # If you omit the "source" field, the element will trigger on
+                        # all incoming events regardless of source Machine
+                        #
+                        # If you omit the "target" field, the element will trigger on
+                        # all Machines.
 
-# The mapping section of a Element is a table of events for incoming data.
-#
-
-mapping:
+keywords:
   silent:    # Trigger this Function when the microphone goes "silent"
-    function: image
+    type: image
     keywords:
       file: ghost.gif       # Show ghost.gif
       position: [100, 100]   # at [100, 100]
       duration: 10.0         # for 10 seconds.
 
   quiet:     # Trigger this Function when the microphone goes "quiet"
-    function: image
+    type: image
     keywords:
       file: goblin.gif
       position:
         - [0, [100, 100]]    #  Start at 100, 100 at time 0.
         - [5, [1000, 100]]   #  Move to [1000, 100] by time 5
         - [15, [100, 1000]]  #  Move to [100, 1000] by time 15
+
+  _default:  # Trigger for everything else.
+    type: something
 
 ---
 
@@ -133,30 +138,29 @@ mapping:
 
 type: random
 
-data:
+keywords:
   mean: 3.0                  # Trigger on average every 3 seconds.
 
   distribution: poisson      # Select the distribution of these events.
                              # Today, we only have one distribution, poisson,
                              # so you don't have to specify it.
-command:
-  function: random           # Select a function at random
-  arguments:                 # The list of functions from which to select!
-    -
-      function: image
-      keywords:
-        file: $random
-        position: [200, 200]
-        loops: 3
-        size: [[0, 0.10], [1, 5.0], [2, 0.0]]
 
-    -
-      function: image
-      keywords:
-        file: $random
-        position: [[0, [100, 100]], [20, [1000, 1000]]]
-        size: [[0, 0.10], [5, 1.0], [10, 0.0], [18, 1.0], [20, 0.10]]
-        rotation: [[0, 0], [5, 360], [10, -360], [18, 360], [20, 0]]
+arguments:                    # The list of element from which to select.
+  -
+    type: image
+    keywords:
+      file: $random
+      position: [200, 200]
+      loops: 3
+      size: [[0, 0.10], [1, 5.0], [2, 0.0]]
+
+  -
+    type: image
+    keywords:
+      file: $random
+      position: [[0, [100, 100]], [20, [1000, 1000]]]
+      size: [[0, 0.10], [5, 1.0], [10, 0.0], [18, 1.0], [20, 0.10]]
+      rotation: [[0, 0], [5, 360], [10, -360], [18, 360], [20, 0]]
 
 
 ---
@@ -165,10 +169,10 @@ command:
 
 type: sequence
 
-commands:
+arguments:
   -
     time: 0
-    function: image
+    type: image
     keywords:
       file: $random
       position: [[0, [100, 100]], [20, [1000, 1000]]]
@@ -177,7 +181,7 @@ commands:
 
   -
     time: 3.0
-    function: image
+    type: image
     keywords:
       file: $random
       position: [[0, [100, 100]], [20, [1000, 1000]]]
@@ -185,7 +189,7 @@ commands:
       rotation: [[0, 0], [5, 360], [10, -360], [18, 360], [20, 0]]
   -
     time: 10.0
-    function: image
+    type: image
     keywords:
       file: $random
       position: [[0, [100, 100]], [20, [1000, 1000]]]
@@ -193,7 +197,7 @@ commands:
       rotation: [[0, 0], [5, 360], [10, -360], [18, 360], [20, 0]]
   -
     time: 11.0
-    function: image
+    type: image
     keywords:
       file: $random
       position: [[0, [100, 100]], [20, [1000, 1000]]]
@@ -201,7 +205,7 @@ commands:
       rotation: [[0, 0], [5, 360], [10, -360], [18, 360], [20, 0]]
   -
     time: 12.0
-    function: image
+    type: image
     keywords:
       file: $random
       position: [[0, [100, 100]], [20, [1000, 1000]]]
