First cut at element.TwitterSearch

--- a/command/3.global/score/score.yml
+++ b/command/3.global/score/score.yml
@@ -212,3 +212,11 @@ arguments:
       position: [[0, [100, 100]], [20, [1000, 1000]]]
       size: [[0, 0.10], [5, 1.0], [10, 0.0], [18, 1.0], [20, 0.10]]
       rotation: [[0, 0], [5, 360], [10, -360], [18, 360], [20, 0]]
+
+---
+
+type: TwitterSearch
+interval: 10
+search:
+  - #echomesh
+  - #tomswirly
