Simple score in new format works and receives twitters\!

--- a/command/3.global/score/twitter.yml
+++ b/command/3.global/score/twitter.yml
@@ -1,7 +1,7 @@
 type: TwitterSearch
-interval: 10
+interval: 1
 search:
-  - "#echomesh"
-  - "#tomswirly"
+  - "#baseball"
+  - "#love"
 handler:
   type: print
