--- a/command/4.default/config.yml
+++ b/command/4.default/config.yml
@@ -17,7 +17,8 @@ audio:
       window_size: 0
     enable: true
     frames_per_buffer: 4096
-    name: AK5370
+    name: None
+    index: None
     periodsize: 160
     sample_bytes: 2
     sample_rate: 4000
