Oops, add missing files for Python 2.6 equivalent of WeakSet

--- a/command/4.default/config.yml
+++ b/command/4.default/config.yml
@@ -31,7 +31,8 @@ audio:
       loud: 0
 
   output:
-    device: 0
+    name: ''
+    index: -1
     enable: true
     route: audio
     use_aplay: false
