Now we can specify semitones or decibels in units in scores

--- a/command/3.global/score/twitter.yml
+++ b/command/3.global/score/twitter.yml
@@ -1,7 +1,7 @@
 type: TwitterSearch
 interval: 1
 search:
-  - "#baseball"
+  - "#baseball"  # You need quotes around these strings because of the hashtags.
   - "#love"
 handler:
   type: print
