--- a/command/3.global/score/audio5.yml
+++ b/command/3.global/score/audio5.yml
@@ -3,6 +3,6 @@
 type: audio
 file: stereo-2450.wav
 loops: 3
-level: 90%
+level: 1 + 3/4 decibels
 
-# You can use units like % - very convenient!
+# Yes, it will even do simple operations like 1 + 3 / 4.
